// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-toggle-button-group > renders controlled 1`] = `
"<div
  style="width:100%"
>
  <button
    class="btn btn--secondary"
    type="button"
  >
    Clear Selection
  </button>
  <div
    class="toggle-button-group"
  >
    <ul
      aria-label="Toggle Button Group"
    >
      <li>
        <button
          class="toggle-button"
          type="button"
        >
          <span
            class="toggle-button__content"
          >
            <span
              class="toggle-button__title"
            >
              Option 1
            </span>
          </span>
        </button>
      </li>
      <li>
        <button
          class="toggle-button"
          type="button"
        >
          <span
            class="toggle-button__content"
          >
            <span
              class="toggle-button__title"
            >
              Option 2
            </span>
          </span>
        </button>
      </li>
      <li>
        <button
          class="toggle-button"
          type="button"
        >
          <span
            class="toggle-button__content"
          >
            <span
              class="toggle-button__title"
            >
              Option 3
            </span>
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>"
`;

exports[`evo-toggle-button-group > renders custom column sizes 1`] = `
"<div
  class="toggle-button-group"
  data-columns-md="6"
  data-columns-min="1"
  data-columns-sm="3"
  data-columns-xl="8"
  data-columns-xs="2"
>
  <ul>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            First Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Second Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Third Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Pressed on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="true"
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Fourth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Fifth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Pressed on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Sixth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
  </ul>
</div>"
`;

exports[`evo-toggle-button-group > renders default 1`] = `
"<div
  class="toggle-button-group"
>
  <ul>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Button 1
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Button 2
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Button 3
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Button 4
          </span>
        </span>
      </button>
    </li>
  </ul>
</div>"
`;

exports[`evo-toggle-button-group > renders external label 1`] = `
"<h5
  id="GENERATED-0"
>
  Select Items
</h5>
<div
  class="toggle-button-group"
>
  <ul
    aria-labelledby="GENERATED-0"
  >
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            First Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Second Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Third Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Pressed on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Fourth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Fifth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Pressed on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Sixth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
  </ul>
</div>"
`;

exports[`evo-toggle-button-group > renders with default selected 1`] = `
"<div
  class="toggle-button-group"
>
  <ul>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            First Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Second Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="true"
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Third Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Pressed on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Fourth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="true"
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Fifth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Pressed on load
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button"
        type="button"
      >
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Sixth Item
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Empty on load
          </span>
        </span>
      </button>
    </li>
  </ul>
</div>"
`;

exports[`evo-toggle-button-group > renders with icons 1`] = `
"<div
  class="toggle-button-group"
>
  <ul>
    <li>
      <button
        class="toggle-button toggle-button--list-layout"
        type="button"
      >
        <span
          class="toggle-button__icon"
        >
          <svg
            aria-hidden="true"
            class="icon icon--24"
          >
            <symbol
              id="GENERATED-0"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 14a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2H5a1 1 0 0 1-1-1Zm13-1a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2h-2Z"
              />
              <path
                clip-rule="evenodd"
                d="m3.28 8 1.088-3.265A4 4 0 0 1 8.162 2h7.676a4 4 0 0 1 3.795 2.735L20.72 8H23a1 1 0 1 1 0 2h-1.05c.604.838 1.041 1.455 1.341 1.946.241.396.427.762.546 1.145.123.395.163.762.163 1.146V19.5a2.5 2.5 0 0 1-2.5 2.5h-1a2.5 2.5 0 0 1-2.5-2.5V19H6v.5A2.5 2.5 0 0 1 3.5 22h-1A2.5 2.5 0 0 1 0 19.5v-5.263c0-.384.04-.751.163-1.146.12-.383.304-.749.546-1.145.3-.49.737-1.107 1.34-1.946H1a1 1 0 0 1 0-2h2.28Zm2.985-2.632A2 2 0 0 1 8.162 4h7.676a2 2 0 0 1 1.897 1.368L18.945 9H5.056l1.21-3.632Zm-3.849 7.62c.288-.473.721-1.075 1.392-2.006.062.012.126.018.192.018h16c.066 0 .13-.006.192-.018.67.93 1.104 1.533 1.392 2.006.196.322.292.531.344.699.05.157.072.316.072.55V19.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5V18a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v1.5a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-5.263c0-.234.023-.393.072-.55.052-.168.148-.377.344-.7Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-car-24"
            />
          </svg>
        </span>
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Icon 1
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Car
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button toggle-button--list-layout"
        type="button"
      >
        <span
          class="toggle-button__icon"
        >
          <svg
            aria-hidden="true"
            class="icon icon--24"
          >
            <symbol
              id="GENERATED-1"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 8a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2h-2Z"
              />
              <path
                clip-rule="evenodd"
                d="M4 1a1 1 0 0 0 0 2h2.379a.5.5 0 0 1 .353.146l1.981 1.982L7.465 7H5.618A2 2 0 0 0 3.83 8.106l-.71 1.42a1.03 1.03 0 0 0 .067 1.055c.188.263.515.427.837.419a7.472 7.472 0 0 1 3.319.789c.383.191.741.401.804.873l.268 2.013L7 15.382V14.5A2.5 2.5 0 0 0 4.5 12h-1A2.5 2.5 0 0 0 1 14.5v6A2.5 2.5 0 0 0 3.5 23h1A2.5 2.5 0 0 0 7 20.5v-2.882l1.694-.847.083.625A3 3 0 0 0 11.751 20h.498a3 3 0 0 0 2.974-2.604l.083-.625 1.694.847V20.5a2.5 2.5 0 0 0 2.5 2.5h1a2.5 2.5 0 0 0 2.5-2.5v-6a2.5 2.5 0 0 0-2.5-2.5h-1a2.5 2.5 0 0 0-2.5 2.5v.882l-1.415-.707.269-2.013c.063-.472.421-.682.804-.873A7.471 7.471 0 0 1 19.977 11c.379.01.74-.206.913-.543a1.03 1.03 0 0 0-.003-.92l-.716-1.431A2 2 0 0 0 18.382 7h-1.847l-1.248-1.873 1.98-1.98A.5.5 0 0 1 17.622 3H20a1 1 0 1 0 0-2h-2.379a2.5 2.5 0 0 0-1.767.732l-2.122 2.122A.5.5 0 0 1 13.38 4h-2.76a.5.5 0 0 1-.353-.146L8.146 1.732A2.5 2.5 0 0 0 6.38 1H4Zm1.554 8.128L5.618 9H8a1 1 0 0 0 .832-.445l1.704-2.556h2.928l1.704 2.556A1 1 0 0 0 16 9h2.382l.064.128c-1.045.174-2.02.541-2.964 1.013a2.961 2.961 0 0 0-1.61 2.257l-.632 4.734a1 1 0 0 1-.991.868h-.498a1 1 0 0 1-.991-.868l-.631-4.734a2.961 2.961 0 0 0-1.611-2.257c-.944-.472-1.919-.839-2.964-1.013ZM5 14.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v6a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-6Zm14 6v-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5Z"
                fill-rule="evenodd"
              />
            </symbol>
            <use
              href="#icon-atv-24"
            />
          </svg>
        </span>
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Icon 2
          </span>
          <span
            class="toggle-button__subtitle"
          >
            ATV
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button toggle-button--list-layout"
        type="button"
      >
        <span
          class="toggle-button__icon"
        >
          <svg
            aria-hidden="true"
            class="icon icon--24"
          >
            <symbol
              id="GENERATED-2"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M1 2a1 1 0 0 0 0 2h2.204l2.464 10.675A3 3 0 0 0 8.59 17h8.805a3 3 0 0 0 2.928-2.349l1.652-7.434A1.01 1.01 0 0 0 21 6H5.719l-.74-3.202A.999.999 0 0 0 4 2H1Zm6.617 12.225L6.18 8h13.573l-1.381 6.217a1 1 0 0 1-.976.783H8.59a1 1 0 0 1-.974-.775Z"
                fill-rule="evenodd"
              />
              <path
                d="M8 23a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm12-2a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"
              />
            </symbol>
            <use
              href="#icon-cart-24"
            />
          </svg>
        </span>
        <span
          class="toggle-button__content"
        >
          <span
            class="toggle-button__title"
          >
            Icon 3
          </span>
          <span
            class="toggle-button__subtitle"
          >
            Cart
          </span>
        </span>
      </button>
    </li>
    <li>
      <button
        class="toggle-button toggle-button--list-layout"
        type="button"
      >
        <span
          class="toggle-button__icon"
        >
          <svg
            aria-hidden="true"
            class="icon icon--24"
          >
            <symbol
              id="GENERATED-3"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 8a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2h-2Z"
              />
              <path
                clip-rule="evenodd"
                d="M3 2a1 1 0 0 1 1-1h2.378a2.5 2.5 0 0 1 1.768.732l2.121 2.122a.5.5 0 0 0 .354.146h2.757a.5.5 0 0 0 .354-.146l2.121-2.122A2.5 2.5 0 0 1 17.621 1H20a1 1 0 1 1 0 2h-2.38a.5.5 0 0 0-.353.146l-1.936 1.937c.119.11.231.23.336.356L16.967 7h.503a3 3 0 0 1 2.442 1.257l2.715 3.803a2 2 0 0 1 .328 1.58l-.73 3.416c-.21.98-.788 1.887-1.698 2.438-2.056 1.244-5.65 3.04-8.363 3.492-.109.018-.22.018-.329 0-2.713-.452-6.306-2.248-8.362-3.492-.91-.55-1.488-1.458-1.698-2.438l-.73-3.416a2 2 0 0 1 .327-1.58l2.716-3.803A3 3 0 0 1 6.529 7h.502l1.3-1.56c.106-.127.218-.246.337-.357L6.732 3.146A.5.5 0 0 0 6.378 3H4a1 1 0 0 1-1-1Zm8.405 4a2 2 0 0 0-1.537.72l-1.59 1.907a1.01 1.01 0 0 1-.265.231l2.11 5.7c.645 1.74 3.107 1.74 3.752 0l2.11-5.7a.998.998 0 0 1-.254-.218l-1.6-1.92A2 2 0 0 0 12.594 6h-1.19Zm-5.69 3.419a1 1 0 0 1 .295-.273 1 1 0 0 0 .052.202l1.946 5.256a41.172 ..."
`;
